View Issue Details

IDProjectCategoryView StatusLast Update
0025954CommunityOCCT:Modeling Algorithmspublic2015-05-14 16:31
ReporterPawel Assigned Toapn  
PrioritynormalSeveritytweak 
Status closedResolutionfixed 
Product Version6.8.0 
Target Version6.9.0Fixed in Version6.9.0 
Summary0025954: GeomPlate_Surface::SetBounds formatting/logic mismatch
DescriptionI suggest to convert the following lines

if ((Umin>Umax) || (Vmin>Vmax)) Standard_Failure::Raise("Bounds haven't the good sense");
  else
    myUmin=Umin;myUmax=Umax;myVmin=Vmin;myVmax=Vmax;
if ((Umin==Umax) || (Vmin==Vmax)) Standard_Failure::Raise("Bounds are equal");

into

if ((Umin>Umax) || (Vmin>Vmax)) Standard_Failure::Raise("Bounds haven't the good sense");
if ((Umin==Umax) || (Vmin==Vmax)) Standard_Failure::Raise("Bounds are equal");
myUmin=Umin;myUmax=Umax;myVmin=Vmin;myVmax=Vmax;

to avoid confusion.

The condition
else
   myUmin=Umin;myUmax=Umax;myVmin...

might be misleading because only the first assignment is performed in else-case.
Steps To ReproduceNot required.
TagsNo tags attached.
Test case numberNot needed

Activities

git

2015-03-17 19:43

administrator   ~0038451

Branch CR25954 has been created by Pawel.

SHA-1: 7348b8491668b2c50be22f6b7262a610002fd019


Detailed log of new commits:

Author: Pawel
Date: Tue Mar 17 17:43:21 2015 +0100

    Corrected logic/formatting discrepancy.

Pawel

2015-03-17 19:46

developer   ~0038452

Branch CR25954 pushed. Please review.

git

2015-03-20 18:01

administrator   ~0038765

Branch CR25954 has been updated forcibly by msv.

SHA-1: 7f224d188bd84b2968b5d705335e4b87b7c755c5

git

2015-03-20 18:02

administrator   ~0038766

Branch CR25954 has been updated forcibly by msv.

SHA-1: 7ae5625447b81f4f6c4ccf6a6b872be2943f9674

msv

2015-03-20 18:03

developer   ~0038767

Reviewed.
I have corrected the commit message and rebased the branch on current master.

mkv

2015-03-23 19:01

tester   ~0038814

Dear BugMaster,
Branch CR25954 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 7ae5625447b81f4f6c4ccf6a6b872be2943f9674

Number of compiler warnings:

occt component :
Linux: 18 (18 on master)
Windows: 0 (0 on master)

products component :
Linux: 11 (11 on master)
Windows: 4 (4 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
Not needed

Testing on Linux:
occt component :
Total MEMORY difference: 88536122 / 88602162 [-0.07%]
Total CPU difference: 53804.150000000016 / 53186.30000000024 [+1.16%]
products component :
Total MEMORY difference: 23123802 / 23198252 [-0.32%]
Total CPU difference: 15102.849999999991 / 16301.109999999973 [-7.35%]

Testing on Windows:
occt component :
Total MEMORY difference: 57427344 / 56676403 [+1.32%]
Total CPU difference: 45886.984375 / 15129.694584599707 [+203.29%]
products component :
Total MEMORY difference: 15078169 / 15023928 [+0.36%]
Total CPU difference: 15809.578125 / 5841.473045099963 [+170.64%]

There are following differences in images found by testdiff.
http://occt-tests/CR25954-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html
IMAGE caf presentation K1: K1.png differs
IMAGE caf presentation H1: H1.png differs
IMAGE caf presentation I1: I1.png differs
IMAGE caf presentation G1: G1.png differs
IMAGE caf presentation J1: J1.png differs

msv

2015-03-24 12:25

developer   ~0038828

Dear mkv, the changes in the pictures could not be caused by this fix, because the changed code is not called at all in these test cases. On my PC these tests give the same picture as on master.

mkv

2015-03-24 13:04

tester   ~0038833

OK.
Branch CR25954 is TESTED.

git

2015-05-14 16:31

administrator   ~0041033

Branch CR25954 has been deleted by inv.

SHA-1: 7ae5625447b81f4f6c4ccf6a6b872be2943f9674

Related Changesets

occt: master 2a8523ac

2015-03-17 16:43:21

Pawel


Committer: apn Details Diff
0025954: GeomPlate_Surface::SetBounds formatting/logic mismatch

Corrected logic/formatting discrepancy.
Affected Issues
0025954
mod - src/GeomPlate/GeomPlate_Surface.cxx Diff File

Issue History

Date Modified Username Field Change
2015-03-17 19:38 Pawel New Issue
2015-03-17 19:38 Pawel Assigned To => Pawel
2015-03-17 19:43 git Note Added: 0038451
2015-03-17 19:46 Pawel Note Added: 0038452
2015-03-17 19:46 Pawel Assigned To Pawel => msv
2015-03-17 19:46 Pawel Status new => resolved
2015-03-17 19:46 Pawel Steps to Reproduce Updated
2015-03-20 18:01 git Note Added: 0038765
2015-03-20 18:02 git Note Added: 0038766
2015-03-20 18:03 msv Note Added: 0038767
2015-03-20 18:03 msv Assigned To msv => bugmaster
2015-03-20 18:03 msv Status resolved => reviewed
2015-03-20 18:09 mkv Assigned To bugmaster => mkv
2015-03-23 19:01 mkv Note Added: 0038814
2015-03-23 19:01 mkv Assigned To mkv => msv
2015-03-23 19:01 mkv Status reviewed => feedback
2015-03-23 19:01 mkv Test case number => Not needed
2015-03-24 12:25 msv Note Added: 0038828
2015-03-24 12:25 msv Assigned To msv => bugmaster
2015-03-24 12:25 msv Status feedback => reviewed
2015-03-24 12:25 msv Assigned To bugmaster => mkv
2015-03-24 13:04 mkv Note Added: 0038833
2015-03-24 13:04 mkv Assigned To mkv => bugmaster
2015-03-24 13:04 mkv Status reviewed => tested
2015-03-27 17:42 apn Changeset attached => occt master 2a8523ac
2015-03-27 17:42 apn Assigned To bugmaster => apn
2015-03-27 17:42 apn Status tested => verified
2015-03-27 17:42 apn Resolution open => fixed
2015-05-14 15:28 aiv Status verified => closed
2015-05-14 15:31 aiv Fixed in Version => 6.9.0
2015-05-14 16:31 git Note Added: 0041033