0025954: GeomPlate_Surface::SetBounds formatting/logic mismatch

Corrected logic/formatting discrepancy.